# symcalc

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/symcalc/: __init__.py  cli.py  core.py  nothing.py  progress.py
tests/: test_cli.py  test_core.py
